--- a/src/app/components/cv-model-bakeli/cv-model-bakeli.component.html
+++ b/src/app/components/cv-model-bakeli/cv-model-bakeli.component.html
@@ -1,22 +1,12 @@
 <section id="cvBakeli">
   <hr>
   <h1 class="text-center">
-    <span class="">Tous les</span><span class=""> bakelistes</span>
+    <span class="">Profil de</span><span class=""> AigleNoir</span>
   </h1>
   <hr>
   <div class="container">
-    <div class="row marge_row">
-      <div class="col-sm-8">
-        <h1>Bakeliste AigleNoir</h1>
-        <h3>Formation</h3>
-        <h3>Disponibilite</h3>
-      </div>
-      <div class="col-sm-3">
-        <img src="/assets/images/download.png">
-      </div>
-    </div>
     <div class="row">
-      <div class="col-sm-8">
+      <div class="col-md-8 left-side-desktop">
         <div class="projets-container">
           <h2 class="projet">Projets Realisés</h2>
           <div class="projet-item-container">
@@ -66,7 +56,7 @@
         </div>
 
       </div>
-      <div class="col-sm-3">
+      <div class="col-md-3 right-side-desktop">
         <p class="tec">Technologies </p>
         <ul>
           <li>Technologies utilises</li>
