--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -47,6 +47,7 @@ span.bakeli {
 div#navbarTogglerDemo03 {
     vertical-align: middle;
     display: table-cell !important;
+    float: right;
 }
 
 ul.right-nav-talent {
