--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -16,7 +16,7 @@
       </li>
     </ul> -->
     <ul class="right-nav-talent">
-        <a routerLink="/se-connecter" class="connexion-link" data-toggle="tooltip" data-placement="top" title="Se connecter">
+        <a *ngIf="!isGuestUser" routerLink="/se-connecter" class="connexion-link" data-toggle="tooltip" data-placement="top" title="Se connecter">
           <li><i class="fas fa-sign-in-alt"></i></li>
         </a>
         <a [routerLink]="['/inscription-recruteur']" class="inscription-link" data-toggle="tooltip" data-placement="top" title="S'inscrire">
