--- a/src/app/components/inscription-recruteur/inscription-recruteur.component.css
+++ b/src/app/components/inscription-recruteur/inscription-recruteur.component.css
@@ -79,3 +79,12 @@ h1 {
     font-weight: 700;
     font-size: 38px;
   }
+  .ui.submit.button.submit_container {
+    width: 100%;
+}
+
+.ui.submit.button.submit_container button {
+    font-size: 20px;
+    color:  #fff;
+    font-weight: 600;
+}
