--- a/src/styles.css
+++ b/src/styles.css
@@ -105,3 +105,13 @@ h1 span:last-child {
   /* span{
     font-size:15px;
   } */
+
+  .ui.submit.button.submit_container {
+    width: 100%;
+}
+
+.ui.submit.button.submit_container button {
+    font-size: 20px;
+    color:  #fff;
+    font-weight: 600;
+}
