--- a/src/app/components/inscription-recruteur/inscription-recruteur.component.html
+++ b/src/app/components/inscription-recruteur/inscription-recruteur.component.html
@@ -10,64 +10,140 @@
         <h1>
           <span class="fa fa-user-plus fa-4x"></span>&nbsp;&nbsp;Inscription</h1>
       </div>
-      <form ngNativeValidate (ngSubmit)="onRegisterRecruiter()">
+      <form (ngSubmit)="onRegisterRecruiter()" id="recruiter_register_form">
         <div class="ui inverted form form-in">
           <hr>
-            <div *ngIf="isSuccessRegister" class="alert alert-success success-request-alert">
-              Votre compte a été créé avec succès. <a routerLink="/se-connecter" class="login_link">Connectez-vous ici !</a>
-            </div>
-            <div *ngIf="isRegisterError" class="alert alert-danger error-request-alert">
-                Un problème est survenu. Veuillez réessayer plus tard.
-              </div>
-          <hr>
-          <div class="two fields">
-            <div class="field">
-              <input class="inputstyle" required placeholder="Prénom" name="first_name" type="text"
-                [(ngModel)]="data.first_name">
-            </div>
-            <div class="field">
-              <input class="inputstyle" placeholder="Nom" name="last_name" type="text" [(ngModel)]="data.last_name">
-            </div>
+          <div *ngIf="isSuccessRegister" class="alert alert-success success-request-alert">
+            Votre compte a été créé avec succès. <br />
+            <a routerLink="/se-connecter" class="login_link">Connectez-vous ici !</a>
+          </div>
+          <div *ngIf="isRegisterError" class="alert alert-danger error-request-alert">
+            Un problème est survenu. Veuillez réessayer plus tard.
           </div>
           <hr>
-          <div class="two fields">
-            <div class="field">
-              <input class="inputstyle" placeholder="Email" name="email" type="text" [(ngModel)]="data.email">
+          <div class="alert alert-warning required_warning" *ngIf="showRequiredFieldAlert">
+            Les champs précédés d'un <span class="required_asterix">*</span> sont requis.
+          </div>
+          <hr>
+          <div class="row reg_form_row">
+            <div class="col-md-6">
+              <div class="field ui left corner labeled input">
+                <input class="inputstyle" required placeholder="Prénom" name="first_name" type="text"
+                  [(ngModel)]="data.first_name">
+                <div class="ui left corner label volkeno-green-bgcolor-transparent">
+                  <i class="asterisk icon red"></i>
+                </div>
+              </div>
+              <div class="alert alert-danger error-request-alert" *ngIf="isFirstNameEmpty">
+                Votre prénom est requis.
+              </div>
             </div>
-            <div class="field">
-              <input class="inputstyle" placeholder="Téléphone" name="phone" type="text" [(ngModel)]="data.phone">
+
+            <div class="col-md-6">
+              <div class="field ui left corner labeled input">
+                <input class="inputstyle" placeholder="Nom" name="last_name" type="text" [(ngModel)]="data.last_name">
+                <div class="ui left corner label volkeno-green-bgcolor-transparent">
+                  <i class="asterisk icon red"></i>
+                </div>
+              </div>
+              <div class="alert alert-danger error-request-alert" *ngIf="isLastNameEmpty">
+                Votre nom est requis.
+              </div>
+            </div>
+          </div>
+
+          <hr>
+          <div class="row reg_form_row">
+            <div class="col-md-6">
+              <div class="field ui left corner labeled input">
+                <input class="inputstyle" placeholder="Email" name="email" type="text" [(ngModel)]="data.email">
+                <div class="ui left corner label volkeno-green-bgcolor-transparent">
+                  <i class="asterisk icon red"></i>
+                </div>
+              </div>
+              <div class="alert alert-danger error-request-alert" *ngIf="isEmailEmpty">
+                Votre email est requis.
+              </div>
+              <div class="alert alert-danger error-request-alert" *ngIf="emailIsExist">
+                Cet email existe déjà.
+              </div>
+
+            </div>
+            <div class="col-md-6">
+              <div class="field ui left corner labeled input">
+                <input class="inputstyle" placeholder="Téléphone" name="phone" type="text" [(ngModel)]="data.phone">
+                <div class="ui left corner label volkeno-green-bgcolor-transparent">
+                  <i class="asterisk icon red"></i>
+                </div>
+              </div>
+              <div class="alert alert-danger error-request-alert" *ngIf="isPhoneEmpty">
+                Téléphone est requis.
+              </div>
             </div>
           </div>
           <hr>
 
-          <div class="two fields">
-            <div class="field">
-              <input class="inputstyle" placeholder="Mot de passe" name="password" type="password"
-                [(ngModel)]="data.password">
-            </div>
-            <div class="field">
-              <input class="inputstyle" placeholder="Confirmation du mot de passe" name="confirm_password"
-                type="password" [(ngModel)]="data.confirmPassword">
-            </div>
-          </div>
-          <div class="row error-row" *ngIf="isPasswordError" >
-              <div class="col-md-12 error-content">
-                  <div class="alert alert-danger error-request-alert">
-                      Les deux mots de passe ne sont pas identiques.
-                  </div>
+          <div class="row reg_form_row">
+            <div class="col-md-6">
+              <div class="field ui left corner labeled input">
+                <input class="inputstyle" placeholder="Mot de passe" name="password" type="password"
+                  [(ngModel)]="data.password">
+                <div class="ui left corner label volkeno-green-bgcolor-transparent">
+                  <i class="asterisk icon red"></i>
+                </div>
+              </div>
+              <div class="alert alert-danger error-request-alert" *ngIf="isPasswordEmpty">
+                Mot de passe requis.
               </div>
             </div>
+            <div class="col-md-6">
+              <div class="field ui left corner labeled input">
+                <input class="inputstyle" placeholder="Confirmation du mot de passe" name="confirm_password"
+                  type="password" [(ngModel)]="data.confirmPassword">
+                <div class="ui left corner label volkeno-green-bgcolor-transparent">
+                  <i class="asterisk icon red"></i>
+                </div>
+              </div>
+              <div class="alert alert-danger error-request-alert" *ngIf="isRepeatPasswordEmpty">
+                Confirmation requise.
+              </div>
+            </div>
+          </div>
+          <div class="row error-row" *ngIf="isPasswordError">
+            <div class="col-md-12 error-content">
+              <div class="alert alert-danger error-request-alert">
+                Les deux mots de passe ne sont pas identiques.
+              </div>
+            </div>
+          </div>
           <hr>
 
           <div class="field">
-            <div class="two fields">
-              <div class="field">
-                <input class="inputstyle" placeholder="Raison Sociale" name="recruiter_raison_sociale"
-                  [(ngModel)]="data.recruiter_raison_sociale" type="text">
+            <div class="row reg_form_row">
+              <div class="col-md-6">
+                <div class="field ui left corner labeled input">
+                  <input class="inputstyle" placeholder="Raison Sociale" name="recruiter_raison_sociale"
+                    [(ngModel)]="data.recruiter_raison_sociale" type="text">
+                  <div class="ui left corner label volkeno-green-bgcolor-transparent">
+                    <i class="asterisk icon red"></i>
+                  </div>
+                </div>
+                <div class="alert alert-danger error-request-alert" *ngIf="isRecruiterRSEmpty">
+                  Ce champ est requis.
+                </div>
               </div>
-              <div class="field">
-                <input class="inputstyle" placeholder="Domaine Professionnel" name="recruiter_domaine_pro"
-                  [(ngModel)]="data.recruiter_domaine_pro" type="text">
+
+              <div class="col-md-6">
+                <div class="field ui left corner labeled input">
+                  <input class="inputstyle" placeholder="Domaine Professionnel" name="recruiter_domaine_pro"
+                    [(ngModel)]="data.recruiter_domaine_pro" type="text">
+                  <div class="ui left corner label volkeno-green-bgcolor-transparent">
+                    <i class="asterisk icon red"></i>
+                  </div>
+                </div>
+                <div class="alert alert-danger error-request-alert" *ngIf="isRecruiterDPEmpty">
+                  Ce champ est requis.
+                </div>
               </div>
             </div>
             <a routerLink="/se-connecter">Connectez vous ici!</a><br><br>
@@ -76,8 +152,8 @@
                 S'inscrire
               </button>
               <button *ngIf="isButtonLoading" class="btn btn-warning">
-                  Inscription en cours &nbsp;
-                  <i class="fas fa-spin fa-spinner"></i>
+                Inscription en cours &nbsp;
+                <i class="fas fa-spin fa-spinner"></i>
               </button>
             </div>
           </div>
