--- a/src/styles.css
+++ b/src/styles.css
@@ -115,3 +115,25 @@ h1 span:last-child {
     color:  #fff;
     font-weight: 600;
 }
+
+.volkeno-green-bgcolor{
+    background-color: #009688 !important;
+    border-color: #009688 !important;
+}
+.volkeno-green-color{
+    color: #009688 !important;
+}
+.volkeno-green-bgcolor-transparent{
+    background-color: transparent !important;
+    border-color: #ececec !important;
+}
+
+.form-error{
+    margin-top: 5px;
+}
+
+span.required_asterix {
+    font-size: 19px;
+    font-weight: 600;
+    color: red;
+  }
