--- a/src/app/components/cv-model-bakeli/cv-model-bakeli.component.html
+++ b/src/app/components/cv-model-bakeli/cv-model-bakeli.component.html
@@ -1,4 +1,9 @@
 <section id="cvBakeli">
+  <div class="returnBack-btn-container">
+    <a href="#" data-toggle="tooltip" data-placement="top" title="Revenir à la page d'accueil" class="btn btn-default returnBack-btn">
+      <i class="fas fa-arrow-circle-left fa-4x"></i>
+    </a>
+  </div>
   <hr>
   <h1 class="text-center">
     <span class="">Profil de</span><span class=""> AigleNoir</span>
