--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,21 +7,24 @@
   </a>
 
   <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-    <!-- <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#">Accueil <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" href="#">Comment ça marche ?</a>
       </li>
-    </ul> -->
-    <ul class="right-nav-talent">
+      <li class="nav-item">
+          <a class="nav-link" href="#">Des questions ?</a>
+        </li>
+    </ul>
+    <!-- <ul class="right-nav-talent">
         <a routerLink="/se-connecter" class="connexion-link" data-toggle="tooltip" data-placement="top" title="Se connecter">
           <li><i class="fas fa-sign-in-alt"></i></li>
         </a>
         <a routerLink="/inscription-recruteur" class="inscription-link" data-toggle="tooltip" data-placement="top" title="S'inscrire">
           <li><i class="fas fa-user-plus"></i></li>  
         </a>
-    </ul>
+    </ul> -->
   </div>
 </nav>
