--- a/src/app/components/homepage-v2/homepage-v2.component.html
+++ b/src/app/components/homepage-v2/homepage-v2.component.html
@@ -1,3 +1,221 @@
-<p>
-  homepage-v2 works!
-</p>
+<section id="homepage-container">
+  <div class="row homepage-row">
+    <div class="container container-body">
+      <div class="col-md-12 page-slogan">
+        <h1 class="slogan text-center"> Hire great talents to build your products ! </h1>
+      </div>
+      <div class="col-md-12 homepage-col">
+        <div id='filter'>
+          <button class='all active'>All</button>
+          <button class='design'>Design</button>
+          <button class='programmation'>Programmation</button>
+          <button class='marketing-digital'>Marketing Digital</button>
+        </div>
+
+        <div id='posts'>
+          <div class="row talent-row">
+            <div class="post programmation col-md-4 talent-col">
+              <div class="row talent-col-row">
+                <div class="col-md-8 talent-nickname">
+                  <img src="/assets/images/avatar-icon.png" alt="Talent Avatar" class="img-responsive talent-avatar-img">
+                  <span class="talent-nickname-content"> 
+                    <span class="nickname"> Talent Gnokhor </span> 
+                  </span>
+                </div>
+                <div class="col-md-4 talent-value">
+                  <span class="value"> 1500$/mois </span>
+                </div>
+                <div class="col-md-12 talent-title-container">
+                    <span class="talent-title"> Backend Developer </span>
+                </div>
+                <div class="col-md-12 talent-skills">
+                  Python - HTML - CSS - JS - Django - Laravel
+                </div>
+                <div class="col-md-12 details-hire">
+                  <div class="row hire-row">
+                      <div class="col-md-4 details-container">
+                          <a routerLink="/detail-bakeliste">
+                            <i class="fas fa-eye"></i>
+                            Détails
+                          </a>
+                        </div>
+                        <div class="col-md-8 hire-btn-container hire-link">
+                          <span class="hire"> Hire </span>
+                        </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!--  -->
+            <div class="post marketing-digital col-md-4 talent-col">
+                <div class="row talent-col-row">
+                  <div class="col-md-8 talent-nickname">
+                    <img src="/assets/images/avatar-icon.png" alt="Talent Avatar" class="img-responsive talent-avatar-img">
+                    <span class="talent-nickname-content"> 
+                      <span class="nickname"> Talent Gnokhor </span> 
+                    </span>
+                  </div>
+                  <div class="col-md-4 talent-value">
+                    <span class="value"> 1500$/mois </span>
+                  </div>
+                  <div class="col-md-12 talent-title-container">
+                      <span class="talent-title"> Backend Developer </span>
+                  </div>
+                  <div class="col-md-12 talent-skills">
+                    Python - HTML - CSS - JS - Django - Laravel
+                  </div>
+                  <div class="col-md-12 details-hire">
+                    <div class="row hire-row">
+                        <div class="col-md-4 details-container">
+                            <a routerLink="/detail-bakeliste">
+                              <i class="fas fa-eye"></i>
+                              Détails
+                            </a>
+                          </div>
+                          <div class="col-md-8 hire-btn-container hire-link">
+                            <span class="hire"> Hire </span>
+                          </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!--  -->
+              <div class="post design col-md-4 talent-col">
+                  <div class="row talent-col-row">
+                    <div class="col-md-8 talent-nickname">
+                      <img src="/assets/images/avatar-icon.png" alt="Talent Avatar" class="img-responsive talent-avatar-img">
+                      <span class="talent-nickname-content"> 
+                        <span class="nickname"> Talent Gnokhor </span> 
+                      </span>
+                    </div>
+                    <div class="col-md-4 talent-value">
+                      <span class="value"> 1500$/mois </span>
+                    </div>
+                    <div class="col-md-12 talent-title-container">
+                        <span class="talent-title"> Backend Developer </span>
+                    </div>
+                    <div class="col-md-12 talent-skills">
+                      Python - HTML - CSS - JS - Django - Laravel
+                    </div>
+                    <div class="col-md-12 details-hire">
+                      <div class="row hire-row">
+                          <div class="col-md-4 details-container">
+                              <a routerLink="/detail-bakeliste">
+                                <i class="fas fa-eye"></i>
+                                Détails
+                              </a>
+                            </div>
+                            <div class="col-md-8 hire-btn-container hire-link">
+                              <span class="hire"> Hire </span>
+                            </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!--  -->
+                <div class="post programmation col-md-4 talent-col">
+                    <div class="row talent-col-row">
+                      <div class="col-md-8 talent-nickname">
+                        <img src="/assets/images/avatar-icon.png" alt="Talent Avatar" class="img-responsive talent-avatar-img">
+                        <span class="talent-nickname-content"> 
+                          <span class="nickname"> Talent Gnokhor </span> 
+                        </span>
+                      </div>
+                      <div class="col-md-4 talent-value">
+                        <span class="value"> 1500$/mois </span>
+                      </div>
+                      <div class="col-md-12 talent-title-container">
+                          <span class="talent-title"> Backend Developer </span>
+                      </div>
+                      <div class="col-md-12 talent-skills">
+                        Python - HTML - CSS - JS - Django - Laravel
+                      </div>
+                      <div class="col-md-12 details-hire">
+                        <div class="row hire-row">
+                            <div class="col-md-4 details-container">
+                                <a routerLink="/detail-bakeliste">
+                                  <i class="fas fa-eye"></i>
+                                  Détails
+                                </a>
+                              </div>
+                              <div class="col-md-8 hire-btn-container hire-link">
+                                <span class="hire"> Hire </span>
+                              </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <!--  -->
+                  <div class="post marketing-digital col-md-4 talent-col">
+                      <div class="row talent-col-row">
+                        <div class="col-md-8 talent-nickname">
+                          <img src="/assets/images/avatar-icon.png" alt="Talent Avatar" class="img-responsive talent-avatar-img">
+                          <span class="talent-nickname-content"> 
+                            <span class="nickname"> Talent Gnokhor </span> 
+                          </span>
+                        </div>
+                        <div class="col-md-4 talent-value">
+                          <span class="value"> 1500$/mois </span>
+                        </div>
+                        <div class="col-md-12 talent-title-container">
+                            <span class="talent-title"> Backend Developer </span>
+                        </div>
+                        <div class="col-md-12 talent-skills">
+                          Python - HTML - CSS - JS - Django - Laravel
+                        </div>
+                        <div class="col-md-12 details-hire">
+                          <div class="row hire-row">
+                              <div class="col-md-4 details-container">
+                                  <a routerLink="/detail-bakeliste">
+                                    <i class="fas fa-eye"></i>
+                                    Détails
+                                  </a>
+                                </div>
+                                <div class="col-md-8 hire-btn-container hire-link">
+                                  <span class="hire"> Hire </span>
+                                </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <!--  -->
+                    <div class="post design col-md-4 talent-col">
+                        <div class="row talent-col-row">
+                          <div class="col-md-8 talent-nickname">
+                            <img src="/assets/images/avatar-icon.png" alt="Talent Avatar" class="img-responsive talent-avatar-img">
+                            <span class="talent-nickname-content"> 
+                              <span class="nickname"> Talent Gnokhor </span> 
+                            </span>
+                          </div>
+                          <div class="col-md-4 talent-value">
+                            <span class="value"> 1500$/mois </span>
+                          </div>
+                          <div class="col-md-12 talent-title-container">
+                              <span class="talent-title"> Backend Developer </span>
+                          </div>
+                          <div class="col-md-12 talent-skills">
+                            Python - HTML - CSS - JS - Django - Laravel
+                          </div>
+                          <div class="col-md-12 details-hire">
+                            <div class="row hire-row">
+                                <div class="col-md-4 details-container">
+                                    <a routerLink="/detail-bakeliste">
+                                      <i class="fas fa-eye"></i>
+                                      Détails
+                                    </a>
+                                  </div>
+                                  <div class="col-md-8 hire-btn-container hire-link">
+                                    <span class="hire"> Hire </span>
+                                  </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+          </div>
+          <!--  -->
+        </div>
+        <div class='hidden'></div>
+      </div>
+    </div>
+  </div>
+</section>
