--- a/src/app/components/cv-model-bakeli/cv-model-bakeli.component.css
+++ b/src/app/components/cv-model-bakeli/cv-model-bakeli.component.css
@@ -40,7 +40,7 @@ h1{
 }
 
 .returnBack-btn-container {
-    position: absolute;
+    position: fixed;
     bottom: 15px;
     right: 20px;
     /* border: 1px solid; */
