--- a/src/app/components/homepage-v2/homepage-v2.component.css
+++ b/src/app/components/homepage-v2/homepage-v2.component.css
@@ -1,231 +1,153 @@
-/* * {
-    margin: 0;
-    padding: 0;
-    outline: 0;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-  } */
-  
-  /* body {
-    font-family: 'Open Sans', sans-serif;
-    background-color: #222;
-    color: #FFF;
-    font-size: 14px;
-    line-height: 20px;
-    letter-spacing: .05px;
-  } */
-  
-  .hidden { display: none; }
-  
-  #filter {
-    text-align: center;
-    /* background-color: #333; */
-    padding: 15px;
-  }
+.hidden {
+  display: none;
+}
 
+#filter {
+  text-align: center;
+  /* background-color: #333; */
+  padding: 15px;
+}
 
-  #filter button {
-    border: 0;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 17px;
-    color: #000;
-    cursor: pointer;
-    padding: 5px 20px;
-    background: transparent;
-    font-weight: 500;
-  }
-  
-  #filter button.active { 
-    background-color: #ff9800;
-    border-radius: 5px;
-    font-weight: 800;
-   }
-  
-  #filter button:focus { 
-      outline: 0; 
-    }
-  
-  #posts {
-    max-width: 1200px;
-    margin: 0 auto;
-  }
-  
+#filter button {
+  border: 0;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 17px;
+  color: #000;
+  cursor: pointer;
+  padding: 5px 20px;
+  background: transparent;
+  font-weight: 500;
+}
+
+#filter button.active {
+  background-color: #ff9800;
+  border-radius: 5px;
+  font-weight: 800;
+}
+
+#filter button:focus {
+  outline: 0;
+}
+
+#posts {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+#posts .post {
+  float: left;
+}
+
+#posts .post img {
+  position: relative;
+}
+
+@media screen and (max-width: 600px) {
   #posts .post {
-   float: left;
-  }
-  
-  #posts .post img {
-    position: relative;
-    /* display: block;
-    width: -webkit-calc(100% + 60px);
-    width: calc(100% + 60px); */
-    /* opacity: 1;
-    -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-    transition: opacity 0.35s, transform 0.35s;
-    -webkit-transform: translate3d(-30px, 0, 0) scale(1.12);
-    transform: translate3d(-30px, 0, 0) scale(1.12);
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    min-height: 100%; */
-  }
-  
-  /* #posts .post:hover img {
-    opacity: 0.5;
-    -webkit-transform: translate3d(0, 0, 0) scale(1);
-    transform: translate3d(0, 0, 0) scale(1);
-  } */
-  
-  /* #posts .post .post-content {
-    padding: 2em;
-    color: #fff;
-    text-transform: uppercase;
-    font-size: 1.25em;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-  }
-  
-  #posts .post .post-content::before,
-  #posts .post .post-content::after { pointer-events: none; }
-  
-  #posts .post .post-content,
-  #posts .post a {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-  }
-  
-  #posts .post a {
-    z-index: 1000;
-    text-indent: 200%;
-    white-space: nowrap;
-    font-size: 0;
-    opacity: 0;
-  }
-  
-  #posts .post h2 {
-    word-spacing: -0.15em;
-    font-weight: 300;
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    padding: 1em 1.2em;
-  }
-  
-  #posts .post h2,
-  #posts .post p { margin: 0; }
-  
-  #posts .post p {
-    letter-spacing: 1px;
-    font-size: 68.5%;
-    padding: 0 10px 0 0;
     width: 50%;
-    border-right: 1px solid #fff;
-    text-align: right;
-    opacity: 0;
-    -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-    transition: opacity 0.35s, transform 0.35s;
-    -webkit-transform: translate3d(-40px, 0, 0);
-    transform: translate3d(-40px, 0, 0);
   }
-  
-  #posts .post:hover p {
-    opacity: 1;
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-  }
-   @media screen and (max-width: 600px) {
-  
-  #posts .post { width: 50%; } 
-  } */
+}
 
-  .row.talent-row {
-    margin-left: 0px;
-    margin-right: 0px;
+.talent-row {
+  margin-left: 0px;
+  margin-right: 0px;
 }
 
 html, #content-wrapper {
-    height: 100% !important;
+  height: 100% !important;
 }
-.row.homepage-row {
-    margin-bottom: 75px;
+
+.homepage-row {
+  margin-bottom: 75px;
 }
-.row.talent-col-row {
-    border: 1px solid;
-    margin-top: 15px;
-    /* padding: 15px; */
-    border-radius: 5px;
+
+.talent-col-row {
+  border: 1px solid;
+  margin-top: 15px;
+  /* padding: 15px; */
+  border-radius: 5px;
 }
 
 img.img-responsive.talent-avatar-img {
-    width: 68px;
+  width: 68px;
 }
 
 .talent-value {
-    text-align: center !important;
-    border: 1px solid #ececec;
-    border-radius: 0 5px 0px 0;
+  text-align: center !important;
+  border: 1px solid #ececec;
+  border-radius: 0 5px 0px 0;
 }
 
 span.value {
-    text-align: center;
-    line-height: 5 !important;
+  text-align: center;
+  line-height: 5 !important;
 }
 
 .talent-title-container {
-    text-align: center;
-    padding: 25px;
-    border-top: 1px solid #e8e8e8;
-    margin-top: 0px;
-    border-bottom: 1px solid #e8e8e8;
+  text-align: center;
+  padding: 25px;
+  border-top: 1px solid #e8e8e8;
+  margin-top: 0px;
+  border-bottom: 1px solid #e8e8e8;
 }
 
 .talent-skills {
-    text-align: center;
-    padding: 25px;
-    border-top: 1px solid #e8e8e8;
-    margin-top: 0px;
-    border-bottom: 1px solid #e8e8e8;
+  text-align: center;
+  padding: 25px;
+  border-top: 1px solid #e8e8e8;
+  margin-top: 0px;
+  border-bottom: 1px solid #e8e8e8;
 }
 
 .details-hire {
-    text-align: center;
-    /* padding: 5px; */
-    border-top: 1px solid #e8e8e8;
-    margin-top: 0px;
-    border-bottom: 1px solid #e8e8e8;
+  text-align: center;
+  /* padding: 5px; */
+  border-top: 1px solid #e8e8e8;
+  margin-top: 0px;
+  border-bottom: 1px solid #e8e8e8;
 }
 
 .details-container {
-    border: 1px solid #e8e8e8;
-    padding: 15px;
-    border-radius: 0 0 0 5px;
+  border: 1px solid #e8e8e8;
+  padding: 15px;
+  border-radius: 0 0 0 5px;
 }
 
 .hire-btn-container {
-    border: 1px solid #e8e8e8;
-    padding: 15px;
+  border: 1px solid #e8e8e8;
+  padding: 15px;
 }
 
 .hire-btn-container button.hire-btn {
-    width: 100%;
-    height: 100%;
-    border-radius: 0 0 5px 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 0 0 5px 0;
 }
+
 .hire-link, .details-container {
-    cursor: pointer;
+  cursor: pointer;
 }
-.row.talent-col-row {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
+
+.talent-col-row {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
 }
-.row.talent-col-row:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+
+.talent-col-row:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
+
 h1.slogan.text-center {
-    padding: 110px;
-    font-size: 36px;
+  padding: 25px;
+  font-size: 36px;
 }
-  
+
+.no-gutter {
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.no-gutter [class*='col-']:not(:first-child), .no-gutter [class*='col-']:not(:last-child) {
+  padding-right: 0;
+  padding-left: 0;
+}
