--- a/src/app/components/homepage-v2/homepage-v2.component.html
+++ b/src/app/components/homepage-v2/homepage-v2.component.html
@@ -17,34 +17,39 @@
             <div class="post programmation col-md-4 talent-col">
               <div class="col-md-12 talent-col-row">
                 <div class="row card-header-row">
-                  <div class="col-md-8 talent-nickname">
+                  <div class="col-md-12 talent-nickname">
                     <img src="/assets/images/avatar-icon.png" alt="Talent Avatar"
                       class="img-responsive talent-avatar-img">
                     <span class="talent-nickname-content">
                       <span class="nickname"> Talent Gnokhor </span>
                     </span>
                   </div>
-                  <div class="col-md-4 talent-value">
+                  <!-- <div class="col-md-4 talent-value">
                     <span class="value"> 1500$/mois </span>
-                  </div>
+                  </div> -->
                 </div>
                 <div class="row details-row">
                   <div class="col-md-12 talent-title-container">
                     <span class="talent-title"> Backend Developer </span>
                   </div>
                   <div class="col-md-12 talent-skills">
-                    Python - HTML - CSS - JS - Django - Laravel
+                    <i class="fas fa-award fa-2x"></i>
+                    <p>Python - HTML - CSS - JS - Django - Laravel</p>
                   </div>
                   <div class="col-md-12 details-hire">
                     <div class="row hire-row">
                       <div class="col-md-4 details-container">
                         <a routerLink="/detail-bakeliste">
-                          <i class="fas fa-eye"></i>
-                          Détails
+                          <i class="fas fa-eye fa-2x"></i> <br>
+                          <span>Détails</span>
                         </a>
                       </div>
-                      <div class="col-md-8 hire-btn-container hire-link">
-                        <span class="hire"> Hire </span>
+                      <div (click)="onGetCvInfos(545)" class="col-md-8 hire-btn-container hire-link" data-toggle="modal"
+                        data-target="#hireModal">
+                        <span class="hire">
+                          <i class="fas fa-paper-plane fa-2x"></i> <br>
+                          <span>Hire</span>
+                        </span>
                       </div>
                     </div>
                   </div>
@@ -55,34 +60,39 @@
             <div class="post marketing-digital col-md-4 talent-col">
               <div class="col-md-12 talent-col-row">
                 <div class="row card-header-row">
-                  <div class="col-md-8 talent-nickname">
+                  <div class="col-md-12 talent-nickname">
                     <img src="/assets/images/avatar-icon.png" alt="Talent Avatar"
                       class="img-responsive talent-avatar-img">
                     <span class="talent-nickname-content">
                       <span class="nickname"> Talent Gnokhor </span>
                     </span>
                   </div>
-                  <div class="col-md-4 talent-value">
+                  <!-- <div class="col-md-4 talent-value">
                     <span class="value"> 1500$/mois </span>
-                  </div>
+                  </div> -->
                 </div>
                 <div class="row details-row">
                   <div class="col-md-12 talent-title-container">
                     <span class="talent-title"> Backend Developer </span>
                   </div>
                   <div class="col-md-12 talent-skills">
-                    Python - HTML - CSS - JS - Django - Laravel
+                    <i class="fas fa-award fa-2x"></i>
+                    <p>Python - HTML - CSS - JS - Django - Laravel</p>
                   </div>
                   <div class="col-md-12 details-hire">
                     <div class="row hire-row">
                       <div class="col-md-4 details-container">
                         <a routerLink="/detail-bakeliste">
-                          <i class="fas fa-eye"></i>
-                          Détails
+                          <i class="fas fa-eye fa-2x"></i> <br>
+                          <span>Détails</span>
                         </a>
                       </div>
-                      <div class="col-md-8 hire-btn-container hire-link">
-                        <span class="hire"> Hire </span>
+                      <div (click)="onGetCvInfos(545)" class="col-md-8 hire-btn-container hire-link" data-toggle="modal"
+                        data-target="#hireModal">
+                        <span class="hire">
+                          <i class="fas fa-paper-plane fa-2x"></i> <br>
+                          <span>Hire</span>
+                        </span>
                       </div>
                     </div>
                   </div>
@@ -93,34 +103,39 @@
             <div class="post design col-md-4 talent-col">
               <div class="col-md-12 talent-col-row">
                 <div class="row card-header-row">
-                  <div class="col-md-8 talent-nickname">
+                  <div class="col-md-12 talent-nickname">
                     <img src="/assets/images/avatar-icon.png" alt="Talent Avatar"
                       class="img-responsive talent-avatar-img">
                     <span class="talent-nickname-content">
                       <span class="nickname"> Talent Gnokhor </span>
                     </span>
                   </div>
-                  <div class="col-md-4 talent-value">
+                  <!-- <div class="col-md-4 talent-value">
                     <span class="value"> 1500$/mois </span>
-                  </div>
+                  </div> -->
                 </div>
                 <div class="row details-row">
                   <div class="col-md-12 talent-title-container">
                     <span class="talent-title"> Backend Developer </span>
                   </div>
                   <div class="col-md-12 talent-skills">
-                    Python - HTML - CSS - JS - Django - Laravel
+                    <i class="fas fa-award fa-2x"></i>
+                    <p>Python - HTML - CSS - JS - Django - Laravel</p>
                   </div>
                   <div class="col-md-12 details-hire">
                     <div class="row hire-row">
                       <div class="col-md-4 details-container">
                         <a routerLink="/detail-bakeliste">
-                          <i class="fas fa-eye"></i>
-                          Détails
+                          <i class="fas fa-eye fa-2x"></i> <br>
+                          <span>Détails</span>
                         </a>
                       </div>
-                      <div class="col-md-8 hire-btn-container hire-link">
-                        <span class="hire"> Hire </span>
+                      <div (click)="onGetCvInfos(545)" class="col-md-8 hire-btn-container hire-link" data-toggle="modal"
+                        data-target="#hireModal">
+                        <span class="hire">
+                          <i class="fas fa-paper-plane fa-2x"></i> <br>
+                          <span>Hire</span>
+                        </span>
                       </div>
                     </div>
                   </div>
@@ -131,34 +146,39 @@
             <div class="post programmation col-md-4 talent-col">
               <div class="col-md-12 talent-col-row">
                 <div class="row card-header-row">
-                  <div class="col-md-8 talent-nickname">
+                  <div class="col-md-12 talent-nickname">
                     <img src="/assets/images/avatar-icon.png" alt="Talent Avatar"
                       class="img-responsive talent-avatar-img">
                     <span class="talent-nickname-content">
                       <span class="nickname"> Talent Gnokhor </span>
                     </span>
                   </div>
-                  <div class="col-md-4 talent-value">
+                  <!-- <div class="col-md-4 talent-value">
                     <span class="value"> 1500$/mois </span>
-                  </div>
+                  </div> -->
                 </div>
                 <div class="row details-row">
                   <div class="col-md-12 talent-title-container">
                     <span class="talent-title"> Backend Developer </span>
                   </div>
                   <div class="col-md-12 talent-skills">
-                    Python - HTML - CSS - JS - Django - Laravel
+                    <i class="fas fa-award fa-2x"></i>
+                    <p>Python - HTML - CSS - JS - Django - Laravel</p>
                   </div>
                   <div class="col-md-12 details-hire">
                     <div class="row hire-row">
                       <div class="col-md-4 details-container">
                         <a routerLink="/detail-bakeliste">
-                          <i class="fas fa-eye"></i>
-                          Détails
+                          <i class="fas fa-eye fa-2x"></i> <br>
+                          <span>Détails</span>
                         </a>
                       </div>
-                      <div class="col-md-8 hire-btn-container hire-link">
-                        <span class="hire"> Hire </span>
+                      <div (click)="onGetCvInfos(545)" class="col-md-8 hire-btn-container hire-link" data-toggle="modal"
+                        data-target="#hireModal">
+                        <span class="hire">
+                          <i class="fas fa-paper-plane fa-2x"></i> <br>
+                          <span>Hire</span>
+                        </span>
                       </div>
                     </div>
                   </div>
@@ -169,34 +189,39 @@
             <div class="post marketing-digital col-md-4 talent-col">
               <div class="col-md-12 talent-col-row">
                 <div class="row card-header-row">
-                  <div class="col-md-8 talent-nickname">
+                  <div class="col-md-12 talent-nickname">
                     <img src="/assets/images/avatar-icon.png" alt="Talent Avatar"
                       class="img-responsive talent-avatar-img">
                     <span class="talent-nickname-content">
                       <span class="nickname"> Talent Gnokhor </span>
                     </span>
                   </div>
-                  <div class="col-md-4 talent-value">
+                  <!-- <div class="col-md-4 talent-value">
                     <span class="value"> 1500$/mois </span>
-                  </div>
+                  </div> -->
                 </div>
                 <div class="row details-row">
                   <div class="col-md-12 talent-title-container">
                     <span class="talent-title"> Backend Developer </span>
                   </div>
                   <div class="col-md-12 talent-skills">
-                    Python - HTML - CSS - JS - Django - Laravel
+                    <i class="fas fa-award fa-2x"></i>
+                    <p>Python - HTML - CSS - JS - Django - Laravel</p>
                   </div>
                   <div class="col-md-12 details-hire">
                     <div class="row hire-row">
                       <div class="col-md-4 details-container">
                         <a routerLink="/detail-bakeliste">
-                          <i class="fas fa-eye"></i>
-                          Détails
+                          <i class="fas fa-eye fa-2x"></i> <br>
+                          <span>Détails</span>
                         </a>
                       </div>
-                      <div class="col-md-8 hire-btn-container hire-link">
-                        <span class="hire"> Hire </span>
+                      <div (click)="onGetCvInfos(545)" class="col-md-8 hire-btn-container hire-link" data-toggle="modal"
+                        data-target="#hireModal">
+                        <span class="hire">
+                          <i class="fas fa-paper-plane fa-2x"></i> <br>
+                          <span>Hire</span>
+                        </span>
                       </div>
                     </div>
                   </div>
@@ -207,34 +232,39 @@
             <div class="post design col-md-4 talent-col">
               <div class="col-md-12 talent-col-row">
                 <div class="row card-header-row">
-                  <div class="col-md-8 talent-nickname">
+                  <div class="col-md-12 talent-nickname">
                     <img src="/assets/images/avatar-icon.png" alt="Talent Avatar"
                       class="img-responsive talent-avatar-img">
                     <span class="talent-nickname-content">
                       <span class="nickname"> Talent Gnokhor </span>
                     </span>
                   </div>
-                  <div class="col-md-4 talent-value">
+                  <!-- <div class="col-md-4 talent-value">
                     <span class="value"> 1500$/mois </span>
-                  </div>
+                  </div> -->
                 </div>
                 <div class="row details-row">
                   <div class="col-md-12 talent-title-container">
                     <span class="talent-title"> Backend Developer </span>
                   </div>
                   <div class="col-md-12 talent-skills">
-                    Python - HTML - CSS - JS - Django - Laravel
+                    <i class="fas fa-award fa-2x"></i>
+                    <p>Python - HTML - CSS - JS - Django - Laravel</p>
                   </div>
                   <div class="col-md-12 details-hire">
                     <div class="row hire-row">
                       <div class="col-md-4 details-container">
                         <a routerLink="/detail-bakeliste">
-                          <i class="fas fa-eye"></i>
-                          Détails
+                          <i class="fas fa-eye fa-2x"></i> <br>
+                          <span>Détails</span>
                         </a>
                       </div>
-                      <div class="col-md-8 hire-btn-container hire-link">
-                        <span class="hire"> Hire </span>
+                      <div (click)="onGetCvInfos(545)" class="col-md-8 hire-btn-container hire-link" data-toggle="modal"
+                        data-target="#hireModal">
+                        <span class="hire">
+                          <i class="fas fa-paper-plane fa-2x"></i> <br>
+                          <span>Hire</span>
+                        </span>
                       </div>
                     </div>
                   </div>
@@ -248,4 +278,65 @@
       </div>
     </div>
   </div>
+
+  <!-- Modal Hire -->
+  <div class="modal fade" id="hireModal" tabindex="-1" role="dialog" aria-labelledby="hireModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+              aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title text-center" id="hireModalLabel">Formulaire de recrutement</h4>
+        </div>
+        <div class="modal-body">
+          <div class="alert alert-info hire-alert">
+            <p> Vous souhaitez recruter <b>Sadio Sangharé</b> ? </p>
+            <p> Veuillez remplir ce formulaire, nous avons besoin de ces informations afin de mieux vous satisfaire.
+            </p>
+            <p> Une fois le formulaire validé, nous vous contacterons au téléphone pour la suite. </p>
+          </div>
+          <hr>
+          <div class="row hire-form-container">
+            <div class="col-md-12 form-item">
+              <div class="form-group input-item">
+                <input type="text" placeholder="Votre numéro de téléphone" class="form-control hire_item">
+                <!-- <input class="form-control hire_item" type="text" ng2TelInput [ng2TelInputOptions]="{initialCountry: 'in'}"
+                  (hasError)="hasError($event)" (ng2TelOutput)="getNumber($event)"
+                  (intlTelInputObject)="telInputObject($event)" (countryChange)="onCountryChange($event)" /> -->
+              </div>
+            </div>
+            <div class="col-md-12 form-item">
+              <div class="form-group input-item">
+                <textarea type="number" placeholder="Exprimez-nous vos besoins"
+                  class="form-control hire_item"></textarea>
+              </div>
+            </div>
+            <div class="col-md-6 form-item">
+              <div class="form-group input-item">
+                <input type="number" placeholder="Nombre de mois" class="form-control hire_item">
+              </div>
+            </div>
+            <div class="col-md-6 form-item">
+              <div class="form-group input-item">
+                <input type="text" placeholder="Votre budget" class="form-control hire_item">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <div class="actions-btn">
+            <button type="button" class="btn btn-default pull-left volkeno-red-bgcolor close-btn" data-dismiss="modal">
+              <i class="fas fa-times"></i>
+              Fermer
+            </button>
+            <button type="button" class="btn btn-primary volkeno-green-bgcolor sending-request-btn">
+              <i class="fas fa-paper-plane"></i>
+              Envoyer
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </section>
